elk/elastic/elastic1.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: es-cluster
  namespace: helm-elk
spec:
  serviceName: elasticsearch
  replicas: 3
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      imagePullSecrets:
        - name: chubregcred
      containers:
      - name: elasticsearch
        #image: docker.elastic.co/elasticsearch/elasticsearch:7.5.0
        image: chub.cloud.gov.in/library/elasticsearch:7.16.2
        resources:
            limits:
              cpu: 1000m
            requests:
              cpu: 100m
        ports:
        - containerPort: 9200
          name: rest
          protocol: TCP
        - containerPort: 9300
          name: inter-node
          protocol: TCP
        volumeMounts:
        - name: data
          mountPath: /usr/share/elasticsearch/data
        - name: config
          mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
          readOnly: true
          subPath: elasticsearch.yml
      volumes:
      - name: config
        configMap:
          name: es-config
     #init containers 
  volumeClaimTemplates:
  - metadata:
      name: data
      labels:
        app: elasticsearch
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: cephblock
      resources:
        requests:
          storage: 10Gi
