elk/elastic/svc.yml
kind: Service
apiVersion: v1
metadata:
  name: elasticsearch
  namespace: helm-elk
  labels:
    app: elasticsearch
spec:
  selector:
    app: elasticsearch
  clusterIP: None
    #type: ClusterIP
  ports:
    - port: 9200
      name: rest
    - port: 9300
      name: inter-node
